@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2021 Australian Signals Directorate
+ * Copyright 2010-2024 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -31,11 +31,15 @@ import java.util.Enumeration;
 import java.util.List;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import java.util.zip.ZipEntry;
 import org.apache.commons.lang3.StringUtils;
 
 public class JDBCDriver {
 
+    private static final Logger LOGGER = Logger.getLogger(JDBCDriver.class.getName());
+    
     private String driverName;
     private File jarFile;
 
@@ -68,7 +72,7 @@ public class JDBCDriver {
                             }
                         }
                     } else {
-                        final URL[] searchPath = new URL[]{new URL("file:///" + jarFile.getAbsolutePath())};
+                        final URL[] searchPath = new URL[]{jarFile.toURI().toURL()};
                         try (final URLClassLoader clloader = new URLClassLoader(searchPath)) {
                             for (final Enumeration<JarEntry> e = jf.entries(); e.hasMoreElements();) {
                                 final JarEntry je = e.nextElement();
@@ -93,7 +97,7 @@ public class JDBCDriver {
             }
 
         } catch (final IOException ex) {
-
+            LOGGER.log(Level.WARNING, "Error encountered while getting drivers");
         }
         return driverList;
     }
@@ -115,7 +119,7 @@ public class JDBCDriver {
     }
 
     public Driver getDriver() throws MalformedURLException, ClassNotFoundException, NoSuchMethodException, NoSuchMethodException, InstantiationException, InstantiationException, InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException {
-        final URL[] searchPath = new URL[]{new URL("file:///" + jarFile.getAbsolutePath())};
+        final URL[] searchPath = new URL[]{jarFile.toURI().toURL()};
         final ClassLoader clloader = URLClassLoader.newInstance(searchPath);
 
         // Note: we can't use DriverManager here: it only uses classes that have been loaded by the system class loader.
