@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2021 Australian Signals Directorate
+ * Copyright 2010-2024 Australian Signals Directorate
  * 
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,9 +19,11 @@ import java.io.File;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import javax.swing.JFileChooser;
 import org.openide.filesystems.FileChooserBuilder;
+import org.openide.filesystems.FileObject;
+import org.openide.loaders.DataObject;
+import org.openide.windows.TopComponent;
 import org.openide.windows.WindowManager;
 
 /**
@@ -43,8 +45,7 @@ public class ShowFileChooserDialog implements Runnable {
      *     file chooser to open
      * @param fileChooserMode the mode to open the file chooser in
      */
-    public ShowFileChooserDialog(final FileChooserBuilder fileChooserBuilder,
-                                 final FileChooserMode fileChooserMode) {
+    public ShowFileChooserDialog(final FileChooserBuilder fileChooserBuilder, final FileChooserMode fileChooserMode) {
         this.fileChooserBuilder = fileChooserBuilder;
         this.fileChooserMode = fileChooserMode;
     }
@@ -57,19 +58,23 @@ public class ShowFileChooserDialog implements Runnable {
     public void run() {
         if (fileChooserMode != null) {
             switch (fileChooserMode) {
-                case OPEN:
-                    selectedFiles = new File[] { fileChooserBuilder.showOpenDialog() };
-                    break;
-                case SAVE:
+                case OPEN -> selectedFiles = new File[] {fileChooserBuilder.showOpenDialog()};
+                case SAVE -> {
                     final JFileChooser jfc = fileChooserBuilder.createFileChooser();
-                    jfc.showSaveDialog(WindowManager.getDefault().getMainWindow());                        
-                    selectedFiles = new File[] { jfc.getSelectedFile() };   
-                    break;
-                case MULTI:
-                    selectedFiles = fileChooserBuilder.showMultiOpenDialog();
-                    break;
-                default:
-                    break;
+                    final FileObject currentFileObject = getCurrentFileObject();
+                    if (currentFileObject != null) {
+                        jfc.setSelectedFile(new File(currentFileObject.getName()));
+                    }
+                    final int returnState = jfc.showSaveDialog(WindowManager.getDefault().getMainWindow());
+                    //The showSaveDialog returns a file object at the location of the application source files when cancel is selected 
+                    if (returnState != JFileChooser.CANCEL_OPTION){
+                        selectedFiles = new File[] {jfc.getSelectedFile()};
+                    }
+                }
+                case MULTI -> selectedFiles = fileChooserBuilder.showMultiOpenDialog();
+                default -> {
+                    // do nothing
+                }
             }
         }
     }
@@ -81,7 +86,18 @@ public class ShowFileChooserDialog implements Runnable {
      */
     public Optional<List<File>> getSelectedFiles() {
         return Optional.ofNullable(selectedFiles == null || selectedFiles.length == 0
-                || (selectedFiles.length == 1 && selectedFiles[0] == null)
-                ? null : Arrays.stream(selectedFiles).collect(Collectors.toList()));
+                || (selectedFiles.length == 1 && selectedFiles[0] == null) 
+                ? null : Arrays.stream(selectedFiles).toList());
+    }
+    
+    private FileObject getCurrentFileObject() {
+        final TopComponent tc = TopComponent.getRegistry().getActivated();
+        if (tc != null) {
+            final DataObject dob = tc.getLookup().lookup(DataObject.class);
+            if (dob != null) {
+                return dob.getPrimaryFile();
+            }
+        }
+        return null;
     }
 }
